# Toyota

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
docker/: .env  docker-compose.yaml
docker/postgres/: init.sql
mlartifacts/637881112293006864/0a0dda089c4a411e8e5401994dc18487/artifacts/: model_summary.txt
mlartifacts/637881112293006864/206c8cf0c6904b3d9914d18b56f275c2/artifacts/: model_summary.txt
mlartifacts/637881112293006864/28006b6d0da64f078c66721bcd9cb2fa/artifacts/: model_summary.txt
mlartifacts/637881112293006864/29942bc0920640f09a7ff497a8e6925d/artifacts/: model_summary.txt
mlartifacts/637881112293006864/430ebaa9932e4079b2d121c0194e30dc/artifacts/: model_summary.txt
mlartifacts/637881112293006864/66d329d9f29749fca26468b0494386ba/artifacts/: model_summary.txt
mlartifacts/637881112293006864/7064befb54e14da388e6c46bcea529bd/artifacts/: model_summary.txt
mlartifacts/637881112293006864/757532cfb22e477d97766399982842fd/artifacts/: model_summary.txt
mlartifacts/637881112293006864/7eea0a874c1d4dc982b375b1fff75c78/artifacts/: model_summary.txt
mlartifacts/637881112293006864/94395cf8609b436a818fd1eda2b4d7d6/artifacts/: model_summary.txt
toyota/: assets.py  definitions.py  string_utils.py  utils.py  utils_lasso.py  utils_ridge.py
toyota/notebooks/: combined_models.ipynb  first_data_cleaning.ipynb  lasso_selection.ipynb  manual_feature_selection.ipynb  pca.ipynb  ridge_selection.ipynb  sequence_selection.ipynb  toyota_clean_eda.ipynb  toyota_raw_eda.ipynb  toyota_strings.ipynb
(+2011 files in other folders)
